<resources>
    <string name="app_name">MuestraAntonelli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Muestra Maxi</string>
    <string name="nav_header_subtitle">App de muestra</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="users_tittle">Usuarios</string>
    <string name="sign_up_tittle">Registro</string>

    <string name="action_call">Llamar</string>
    <string name="users_fragment_label">Bienvenido !</string>
    <string name="signup_fragment_label">Registrarse</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="phone">Telefono</string>

    <string name="confirma">Desea eliminar el usuario seleccionado?</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>

    <string name="usuarioeliminado">El usuario se ha eliminado correctamente</string>
    <string name="usuariocreado">El usuario se ha creado exitosamente</string>
    <string name="errorcreandousuario">Hubo un problema al intentar grabar el usuario. Por favor, intentá más tarde</string>

    <string name="add">add</string>
    <string name="imageviewempresa">imageViewEmpresa</string>

    <string name="ingresenombre">Ingrese nombre</string>
    <string name="ingreseemail">Ingrese email</string>
    <string name="ingresephone">Ingrese telefono</string>

    <string name="buttonsignup">Registrarse</string>
    <string name="selfie">Sacarse una selfie</string>

    <string name="toastPermisos">No se otorgaron todos los permisos necesarios</string>

    <string name="press">Mantener presionado para eliminar item</string>

    <string name="touch">Toque aquí para sacarse una foto</string>

    <string name="errorAPI">Error al conectar con el API</string>
</resources>