<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.signup.SignUpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingresenombre"
        app:layout_constraintBottom_toTopOf="@id/ti_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingreseemail"
        app:layout_constraintBottom_toTopOf="@id/ti_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_nombre"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingresephone"
        app:layout_constraintBottom_toTopOf="@id/ll_selfie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_email"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TextContrastCheck"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_selfie"
        app:layout_constraintTop_toBottomOf="@id/ti_phone"
        app:layout_constraintBottom_toTopOf="@id/bt_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="@color/black">

        <ImageView
            android:id="@+id/iv_selfie"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:contentDescription="@string/selfie"
            android:padding="1dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/touch"
            android:textAlignment="center"
            android:textSize="10sp"
            tools:ignore="SmallSp"
            android:background="@color/white"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/buttonsignup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_selfie" />


</androidx.constraintlayout.widget.ConstraintLayout>